fix overflow for welcome bar

--- a/app/assets/stylesheets/chatrooms.scss
+++ b/app/assets/stylesheets/chatrooms.scss
@@ -89,6 +89,8 @@
   justify-content: center;
   align-self: center;
   padding: 2px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .chatroom_delete_button {
