--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -61,6 +61,7 @@
   border: 1px;
   padding: 2px 8px;
   length: 100%;
+  max-width: 60%;
 }
 
 .home_sidebar_right {
